--- a/templates/chat/biotech-roll-result.html
+++ b/templates/chat/biotech-roll-result.html
@@ -9,9 +9,8 @@
     </div>
         <div class="formulaText">{{localize "CLEENMAIN.chatmessage.rollformula"}}  {{formula}}</div>
     <div class="finalText">
-        <div class="tooltip">
+        <div class="tooltip" data-tooltip="{{{tooltip.string}}}"></div>>
             <p>{{localize "CLEENMAIN.chatmessage.rollresult"}} {{result}}</p>
-            <span class="tooltiptext">{{{tooltip.string}}}</span>
         </div>
         <div class="introText">{{resultText}}</div>
     </div>
