--- a/templates/chat/damage-roll-result.html
+++ b/templates/chat/damage-roll-result.html
@@ -9,9 +9,8 @@
     </div>
         <div class="formulaText">{{localize "CLEENMAIN.chatmessage.rollDamageFormula"}}  {{formula}}</div>
     <div class="finalText">
-        <div class="tooltip">
+        <div class="tooltip" data-tooltip="{{{tooltip.string}}}"></div>>
             <p>{{localize "CLEENMAIN.chatmessage.damageresult"}} {{result}}</p>
-            <span class="tooltiptext">{{{tooltip.string}}}</span>
         </div>
     </div>
     <div class="endimg"></div>
