--- a/less/item-sheet.less
+++ b/less/item-sheet.less
@@ -1,43 +1,45 @@
 .cleenmain.sheet.item {
-    h1 {
-        font: @h1-font;
-        color: @title-color;
-        text-transform: @h1-text-transform;
-        border: @h1-border;
+  h1 {
+    font: @h1-font;
+    color: @title-color;
+    text-transform: @h1-text-transform;
+    border: @h1-border;
+  }
+  h2 {
+    font: @h2-font;
+    color: @title-color;
+  }
+  .window-content {
+    background: @itemsheet-background;
+    background-color: @clear-background;
+    font: @default-font;
+  }
+  .editor {
+    height: 100%;
+    width: 100%;
+    background: @edit-background;
+    box-shadow: inset 0 0 6px black;
+    font: @long-text-font;
+  }
+  input {
+    background-color: @edit-background;
+    box-shadow: inset 0 0 3px black;
+    height: 1.5em;
+    color: @core-main-color;
+  }
+  select {
+    background-color: @edit-background;
+    box-shadow: inset 0 0 3px black;
+    height: 1.5em;
+    color: @core-main-color;
+  }
+  input:focus {
+    background-color: @editactive-background;
+  }
+  .sheet-header {
+    input {
+      font-size: 2rem;
+      text-align: center;
     }
-    h2 {
-        font: @h2-font;
-        color: @title-color;
-    }
-    .window-content {
-        background: @itemsheet-background;
-        background-color: @clear-background;
-        font: @default-font;
-    }
-    .editor {
-        height: 100%;
-        width: 100%;
-        background:@edit-background;
-        box-shadow: inset 0 0 6px black;
-        font: @long-text-font;
-    }
-    input{
-        background-color: @edit-background;
-        box-shadow: inset 0 0 3px black;
-        height: 1.5em;
-    }
-    select{
-        background-color: @edit-background;
-        box-shadow: inset 0 0 3px black;
-        height: 1.5em;
-    }
-    input:focus {
-        background-color: @editactive-background;
-    }
-    .sheet-header{
-        input{
-        font-size: 2rem;
-        text-align: center;
-        }
-    }
+  }
 }
