--- a/templates/chat/roll-dialog.html
+++ b/templates/chat/roll-dialog.html
@@ -1,4 +1,4 @@
-<div class="dialog">
+<div class="cem-dialog">
     <div class="intro">
       {{#if (ne actingCharImg "icons/svg/mystery-man.svg")}}
       <div class="introImg"><img src="{{actingCharImg}}" title="{{actingCharName}}" /></div>
